manifests/ingress/gke-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: gke-ingress
spec:
  rules:
  - http:
      paths:
      - path: /
        backend:
          serviceName: timber-frontend
          servicePort: 8080
      - path: /backend/*
        backend:
          serviceName: timber-backend
          servicePort: 8080
