manifests/ingress/ing-nginx-canary.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: nginx-fanout-ingress-canary
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/canary: "true"
    nginx.ingress.kubernetes.io/canary-weight: "30"
spec:
  rules:
  - host: hello-world.info
    http:
      paths:
      - path: /*
        backend:
          serviceName: timber-frontend-v2
          servicePort: 8080
