manifests/ingress/ing-nginx-fanout.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: nginx-fanout-ingress
spec:
  rules:
  - host: timber.u1.training.csol.cloud
    http:
      paths:
      - path: /*
        backend:
          serviceName: timber-frontend
          servicePort: 8080
      - path: /api
        backend:
          serviceName: timber-backend
          servicePort: 8080
