manifests/ingress/ing-nginx-virtual-host.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: nginx-virtual-host-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: userY.ing.k8z.eu
    http:
      paths:
      - backend:
          serviceName: timber-frontend
          servicePort: 8080
  - host: userZ.ing.k8z.eu
    http:
      paths:
      - backend:
          serviceName: timber-backend
          servicePort: 8080
