manifests/ingress/ing-nginx.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: nginx-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
 rules:
 - host: hello-world.info
   http:
     paths:
     - path: /*
       backend:
         serviceName: timber-frontend
         servicePort: 8080
     - path: /backend/*
       backend:
         serviceName: timber-backend
         servicePort: 8080
