manifests/ingress/ing-single-service.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: single-service-ingress
spec:
  backend:
    serviceName: timber-frontend
    servicePort: 8080
