manifests/ingress/web-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: web-ingress
spec:
  backend:
    serviceName: web
    servicePort: 8080
